fixed aspect ratio to avoid layout shifts

--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,14 @@ h3 {
   border-bottom: 1px solid #cbcbcb;
 }
 
+.card--banner__theme {
+  aspect-ratio: 4 / 3;
+}
+
+.card--banner__plugin {
+  aspect-ratio: 1544 / 500;
+}
+
 .card--icon {
   margin-right: 0.6rem;
   border-radius: 5px;
@@ -198,18 +206,6 @@ h3 {
   background-size: 270%;
   background-position: right 20px top 0;
   animation: skeleton-loading 1s ease infinite;
-}
-
-.loading--image {
-  width: 100%;
-  height: 300px;
-  border-bottom: 1px solid #cbcbcb;
-}
-
-.loading--banner {
-  width: 100%;
-  height: 200px;
-  border-bottom: 1px solid #cbcbcb;
 }
 
 .loading--icon {
